--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://iamjagadeesan.github.io/sample/",
+  "home": "https://iamjagadeesan.github.io/Portfolio/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
@@ -15,9 +15,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
